# ai-job-market-analysis

./: .gitignore  README.md  main.py  pyproject.toml
.github/: analysis-instructions.md  copilot-instructions.md  docs-instructions.md
config/: config.yaml  logging.yaml  paths.yaml
notebooks/01_exploration/: 01_exploratory_analysis.ipynb
notebooks/02_cleaning/: 01_data_cleaning.ipynb
notebooks/03_analysis/: 01_salary_benchmarks.ipynb  02_skills_demand.ipynb  03_employment_dynamics.ipynb  04_geo_industry.ipynb  05_hiring_velocity.ipynb  06_segmentation_analysis.ipynb  07_salary_prediction.ipynb
outputs/exports/: ai_jobs_summary.csv  ai_jobs_summary.parquet
outputs/tables/: eda_experience_distribution.csv  eda_numeric_stats.csv  forecast_monthly_ts.csv  forecast_predictions.csv  forecast_seasonal_pattern.csv  forecast_yoy_growth.csv  kpi_company_size_distribution.csv  kpi_employment_type_distribution.csv  kpi_experience_level_distribution.csv  kpi_salary_by_company_size.csv  kpi_salary_by_experience.csv  kpi_salary_by_industry.csv  kpi_salary_by_job_title.csv  kpi_top_paying_titles.csv  seg_by_company_size.csv  seg_by_experience_level.csv  seg_by_industry.csv  seg_by_job_title.csv  seg_crosstab_experience_company.csv  seg_skills_by_experience.csv  seg_skills_by_industry.csv  seg_top_hiring_locations.csv  seg_top_skills.csv  seg_top_tools.csv
src/analysis/: exploratory.py  forecasting_analysis.py  kpi_analysis.py  segmentation_analysis.py
src/data/: clean_data.py  enrich.py  load_data.py  validate.py
src/utils/: helpers.py  logger.py
src/visuals/: employment_plots.py  geo_industry_plots.py  plot_utils.py  salary_plots.py  skills_plots.py  trend_plots.py
