[project]
name = "ai-job-market"
version = "0.1.0"
description = "AI Job Market Analysis — data pipeline and insights (2023–2025)"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    # Data validation & configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Data processing
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    # Logging
    "loguru>=0.7",
    # Configuration
    "pyyaml>=6.0",
    # Notebooks
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py313"]
